<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/splash_logo_linear_layout_margin_left"
    android:layout_marginTop="@dimen/splash_logo_linear_layout_margin_top"
    android:layout_marginRight="@dimen/splash_logo_linear_layout_margin_right"
    android:layout_marginBottom="@dimen/splash_logo_linear_layout_margin_bottom"
    android:background="@drawable/splash_logo_border"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/splash_logo_eng_text"
        android:textAllCaps="true"
        android:textSize="@dimen/splash_logo_eng_text_size"
        android:background="@color/splash_logo_eng_text_background_color"
        android:textColor="@color/splash_logo_eng_text_color"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/splash_logo_separation_view_height"
        android:background="@color/splash_logo_border_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/splash_logo_big_eng_text"
        android:textAllCaps="true"
        android:textScaleX="3"
        android:textSize="@dimen/splash_logo_big_eng_text_size"
        android:textStyle="bold"
        android:textColor="@color/splash_logo_big_eng_text_color"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/splash_logo_separation_view_height"
        android:background="@color/splash_logo_border_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/splash_logo_telugu_text"
        android:textSize="@dimen/splash_logo_telugu_text_size"
        android:background="@color/splash_logo_telugu_text_background_color"
        android:textColor="@color/splash_logo_telugu_text_color"
        android:paddingTop="@dimen/splash_logo_telugu_text_padding_top"
        android:paddingBottom="@dimen/splash_logo_telugu_text_padding_bottom"/>

</LinearLayout>